--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@
   .error {
     background: orangered;
     color: #fff;
-    padding: 5px;
-    margin: 5px;
+    padding: 3px 5px;
+    border-radius: 5px;
+    margin: 3px 0;
   }
